src/test/ui/consts/control-flow/issue-46843.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-46843.rs:10:26
   |
LL | pub const Q: i32 = match non_const() {
   |                          ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
